# WannaCrySys

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  modify_comment.puml
Backend/: CaffShop.sln  Dockerfile  docker-compose.yml
Backend/CaffShop.BLL/: CaffShop.BLL.csproj
Backend/CaffShop.BLL/Interfaces/: ICaffManager.cs  IFileService.cs  ITokenManager.cs
Backend/CaffShop.BLL/Managers/: CaffManager.cs  CaffShopUserManager.cs  FileService.cs  TokenManager.cs
Backend/CaffShop.DAL/: CaffShop.DAL.csproj  CaffShopDbContext.cs  CaffShopDbContextSeed.cs
Backend/CaffShop.DAL/Entities/: Caff.cs  Comment.cs  Purchase.cs  User.cs
Backend/CaffShop.DAL/EntityConfigurations/: CaffConfiguration.cs  RoleConfiguration.cs  UserConfiguration.cs  UserRoleConfiguration.cs
Backend/CaffShop.DAL/Migrations/: 20221030200054_init.Designer.cs  20221030200054_init.cs  20221111114719_Models.Designer.cs  20221111114719_Models.cs  20221113013959_fixies.Designer.cs  20221113013959_fixies.cs  20221113144209_caff_guid.Designer.cs  20221113144209_caff_guid.cs  20221126200609_model.Designer.cs  20221126200609_model.cs  20221201202816_init.Designer.cs  20221201202816_init.cs  20221201202935_entities.Designer.cs  20221201202935_entities.cs  20221201223825_init.Designer.cs  20221201223825_init.cs  20221203190654_init.Designer.cs  CaffShopDbContextModelSnapshot.cs
Backend/CaffShop.DAL/Seed/SeedInterfaces/: IRoleSeedService.cs  IUserSeedService.cs
Backend/CaffShop.DAL/Seed/SeedService/: RoleSeedService.cs  UserSeedService.cs
Backend/CaffShop.DAL/Seed/Users/: Roles.cs
Backend/CaffShop.Server/: CaffShop.Server.csproj  CaffShopDbContext.dgml  Program.cs  appsettings.json  docker.txt  watchlogs-log.db  watchlogs.db
Backend/CaffShop.Server/Controllers/: AuthController.cs  CaffController.cs
Backend/CaffShop.Server/ExceptionHandler/: HttpResponseExceptionFilter.cs  ModelValidationFilter.cs
Backend/CaffShop.Server/Hosting/: HostDataExtensions.cs
Backend/CaffShop.Server/Properties/: launchSettings.json
Backend/CaffShop.Shared/CustomeDTOs/: AuthResponseDto.cs  FileInfo.cs  FileSettings.cs  RefreshTokenDto.cs  ServerResponseDto.cs  ValidationResult.cs
Backend/CaffShop.Shared/DTOs/: CaffDto.cs  CaffForEditingDto.cs  CaffListItemDto.cs  CommentDto.cs  LoginInfo.cs  UserDto.cs  UserForAuthenticationDto.cs  UserForRegistrationDto.cs  UserForUpdate.cs
Backend/CaffShop.Shared/Exceptions/: AuthenticationException.cs  BadRequestException.cs  CustomException.cs  EntityNotFoundException.cs  ForbiddenException.cs  HttpResponseException.cs  UnprocessableEntityException.cs
Backend/CaffShop.Test/: CaffShop.Test.csproj  CaffTests.cs
Backend/CaffShop.Tests/: CaffShop.Tests.csproj  DbContextMock.cs  UnitTest1.cs
Frontend/: README.md  pubspec.yaml
Frontend/android/app/: build.gradle
Frontend/android/app/src/main/: AndroidManifest.xml
Frontend/android/app/src/main/kotlin/com/wannacrysys/caff_parser/: MainActivity.kt
Frontend/android/app/src/profile/: AndroidManifest.xml
Frontend/lib/: MainPage.dart  main.dart
Frontend/lib/models/: api_result.dart  caff_details_dto.dart  caff_dto.dart  comment_dto.dart  login_info.dart  user_dto.dart  user_for_registration_dto.dart  user_for_update_dto.dart
Frontend/lib/network/: auth_service.dart  base_service.dart  caff_service.dart  home_service.dart  main_service.dart  service_base.dart
Frontend/lib/providers/: auth_provider.dart  caff_provider.dart  home_provider.dart  provider_base.dart
Frontend/lib/screens/: add_caff_screen.dart  app_wrapper.dart  auth_screen.dart  caff_screen.dart  edit_caff_screen.dart  home_screen.dart  profile_screen.dart
Frontend/lib/utils/: globals.dart
Frontend/lib/widgets/: bordered_text_field.dart  caff_card.dart  circular_button.dart  comment_card.dart  download_dialog.dart  edit_profile_dialog.dart  great_bold_text.dart  login_form.dart  register_form.dart
Frontend/test/: widget_test.dart
libcaff/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  afl_allowlist.txt  fuzzme.bat  fuzzme.sh
libcaff/caffrunner/: caffrunner.cpp
libcaff/example_crafted/: minimal.caff
libcaff/include/: libcaff.h
libcaff/src/: Binreader.h  Caff.cpp  Caff.h  CaffException.h  Ciff.cpp  Ciff.h  PngEncoder.cpp  PngEncoder.h  libcaff.cpp
uml/: caff_delete.puml  caff_modify_title.puml  caff_upload.puml  data_flow.puml  login_sequence.puml  registration_sequence.puml  systemplan.puml  usecase.puml  usecase_admin.puml  usecase_user.puml
